--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -75,19 +75,29 @@ li {
   padding: 1rem;
 }
 
-table, th, td {
-  background-color: rgb(247, 247, 247);
-  outline: 1px solid #000;
+#index-title {
+  font-size: 42px;
+  background-color: rgb(255, 244, 233);
 }
 
-table {
-  border-spacing: 5px;
-  width: 100%;
+th {
+  /* background-color: rgb(239, 248, 246); */
 }
 
 th, td {
   text-align: center;
-  padding: 0, 2px, 0, 2px;
+  max-width: 115px;
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid #000;
+}
+
+.td-non-link {
+  vertical-align: bottom;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  border-right: 1px solid #000;
 }
 
 .edit-button {
@@ -131,33 +141,6 @@ th, td {
 .blue-link:hover {
   text-decoration: none;
   background-color: var(--color-dark-blue);
-  color: #fff;
-}
-
-.green-link {
-  text-decoration: none;
-  background-color: rgb(211, 243, 216);
-  text-align: center;
-  border: 1px solid var(--color-black);
-  padding: 1rem;
-  font-size: 1.25rem;
-}
-
-.green-link:hover {
-  background-color: var(--color-dark-green);
-  color: #fff;
-}
-
-.green-link-select {
-  text-align: center;
-  background-color: var(--color-white);
-  border: 1px solid var(--color-black);
-  padding: 0.5rem;
-  font-size: 1.25rem;
-}
-
-.green-link-select:hover {
-  background-color: var(--color-dark-green);
   color: #fff;
 }
 
@@ -213,8 +196,8 @@ th, td {
 
 .red-link {
   text-decoration: none;
-  color: var(--color-black);
   background-color: rgb(243, 211, 211);
+  color: var(--color-black);
   border: 1px solid var(--color-black);
   padding: 0.75rem;
   font-size: 1.14rem;
@@ -226,6 +209,33 @@ th, td {
   color: #fff;
 }
 
+.green-link {
+  text-decoration: none;
+  background-color: rgb(211, 243, 216);
+  color: var(--color-black);
+  border: 1px solid var(--color-black);
+  padding: 0.75rem;
+  font-size: 1.14rem;
+}
+
+.green-link:hover {
+  background-color: var(--color-dark-green);
+  color: #fff;
+}
+
+.green-link-select {
+  text-align: center;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-black);
+  padding: 0.5rem;
+  font-size: 1.25rem;
+}
+
+.green-link-select:hover {
+  background-color: var(--color-dark-green);
+  color: #fff;
+}
+
 .reviewed-by-text {
   margin-top: 1rem;
   /* border-bottom: 2px solid var(--color-dark-gray); */
@@ -234,4 +244,13 @@ th, td {
 .reviewed-by-text > * {
   text-align: center;
   font-size: 1.5rem;
+}
+
+.removed-queue {
+  margin-top: 50px;
+
+}
+
+.removed-list {
+  text-align: left;
 }
