--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -3,7 +3,7 @@
 </div>
 <br>
 <% if @number_of_scores_reviewed + current_user.removed_applicants.count == @all_applicants_count %>
-  <% flash[:notice] = "Congratulations! You have reviewed all the applicants!" %>
+  <% flash[:notice] = "Congratulations! You have reviewed all the applicants in your queue!" %>
   <p><%= link_to "See Applicants You Have Reviewed", scores_path, class: "blue-link" %></p>
 <% else %>
   <% if @number_of_scores_reviewed != 0 %>
