--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -10,7 +10,7 @@
   <h3><%= @applicant.first_name %> <%= @applicant.last_name %></h3>
 </div>
 <ol class="list-items">
-  <li>1. <%= link_to "View their application in a new tab.", @applicant.link,  target: :_blank, class: "blue-link new-link" %></li>
+  <li>1. <%= link_to "View #{@applicant.first_name}'s application in a new tab.", @applicant.link,  target: :_blank, class: "blue-link new-link" %></li>
   <li>2. Fill out the Scores Form below.</li>
   <li>3. Press the "submit scores" button</li>
 </ol>
