--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -5,7 +5,7 @@
     </div>
   <% end %>
 <% end %>
-<p id="score-header">Your applicant is:</p>
+<p class="score-header">Your applicant is:</p>
 <div class="title-section">
   <h3><%= @applicant.first_name %> <%= @applicant.last_name %></h3>
 </div>
