--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -17,7 +17,7 @@
   margin-top: 1.5rem;
 }
 
-#score-header {
+.score-header {
   margin-top: 35px;
 }
 
@@ -79,13 +79,12 @@ li {
   padding: 1rem;
 }
 
-#index-title {
+.index-title {
   font-size: 42px;
   background-color: rgb(255, 244, 233);
 }
 
 th, td {
-  text-align: center;
   max-width: 115px;
   padding: 15px;
   text-align: left;
@@ -192,7 +191,6 @@ th, td {
   padding: 25px;
   border-bottom: 1px solid var(--color-light-gray);
   border-top: 1px solid var(--color-light-gray);
-
 }
 
 .text-area {
@@ -260,7 +258,7 @@ th, td {
   margin-top: 75px;
 }
 
-#removed-title {
+.removed-title {
   font-size: 23px;
 }
 
