--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,8 @@
 <div class="l-header">
-    <%= link_to "HNC Scholarship Group", root_path, class: 'l-header__link' %>
+    <%= link_to "HNC Scholarship Group", root_path, class: "l-header__link" %>
     <% unless current_user.nil? %>
-      <%= button_to "Home", root_path, method: :get, class: 'l-header__button' %>
-      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'l-header__button' %>
+      <%= button_to "Home", root_path, method: :get, class: "l-header__button" %>
+      <%= button_to "My Scores", scores_path, method: :get, class: "l-header__button" %>
+      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "l-header__button" %>
     <% end %>
 </div>
