--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -15,20 +15,29 @@
     <% end %>
     <p><%= link_to "See Applications You Have Reviewed", scores_path, class: "blue-link" %></p>
   <% end %>
-  <div class="home-main">
-    <div class="title-section">
-      <h4>To Review New Applicants:</h4>
+  <% if @score.pending? %>
+    <div class="home-main">
+      <div class="title-section">
+        <h4> You got a pending score, yo.</h4>
+        <p><%= button_to "Continue Reviewing #{@applicant.full_name}", edit_score_path(@score, @applicant), method: :get, class: "green-link" %></p>
+      </div>
     </div>
-    <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
-    <p>----- or -----</p>
-    <p> Choose from the list:</p>
-    <div class="select-form">
-      <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
-        <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-        <%= submit_tag 'Choose', class: "green-link-select" %>
-      <% end %>
+  <% else %>
+    <div class="home-main">
+      <div class="title-section">
+        <h4>To Review New Applicants:</h4>
+      </div>
+      <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
+      <p>----- or -----</p>
+      <p> Choose from the list:</p>
+      <div class="select-form">
+        <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+          <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+          <%= submit_tag 'Choose', class: "green-link-select" %>
+        <% end %>
+      </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
 
 
