WIP Pending Scores

--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -5,7 +5,6 @@
 <% if @applicants.count == 0 %>
   <!-- Wording of this message? -->
   <% flash[:notice] = "Congratulations! Your scoring work is done!" %>
-  <p><%= link_to "See Applicants You Have Reviewed", scores_path, class: "blue-link" %></p>
 <% else %>
   <% if @number_of_scores_reviewed != 0 %>
     <% if @number_of_scores_reviewed == 1 %>
@@ -13,22 +12,28 @@
     <% else %>
       <p>You have reviewed <%= @number_of_scores_reviewed %> applications.</p>
     <% end %>
-    <p><%= link_to "See Applications You Have Reviewed", scores_path, class: "blue-link" %></p>
   <% end %>
-  <div class="home-main">
-    <div class="title-section">
-      <h4>To Review New Applicants:</h4>
+  <p><%= link_to "See Applications You Have Reviewed", scores_path, class: "blue-link" %></p>
+  <% if !current_user.pending_score.nil? %>
+    <% @pending_score = current_user.pending_score %>
+    <h4>Sup yo, you got a pending applicant.</h4>
+    <p><%= link_to "Continue \#{applicant full name}'s Scoring", edit_pending_score_path(@pending_score), class: "green-link" %></p>
+  <% else %>
+    <div class="home-main">
+      <div class="title-section">
+        <h4>To Review New Applicants:</h4>
+      </div>
+      <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
+      <p>----- or -----</p>
+      <p> Choose from the list:</p>
+      <div class="select-form">
+        <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+          <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+          <%= submit_tag 'Choose', class: "green-link-select" %>
+        <% end %>
+      </div>
     </div>
-    <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
-    <p>----- or -----</p>
-    <p> Choose from the list:</p>
-    <div class="select-form">
-      <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
-        <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-        <%= submit_tag 'Choose', class: "green-link-select" %>
-      <% end %>
-    </div>
-  </div>
+  <% end %>
 <% end %>
 
 
