--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -56,7 +56,7 @@
   <% end %>
 </div>
 <div class="cancel-buttons-div">
-  <p><%= link_to "Cancel This Review", root_path, class: "red-link" %></p>
+  <p><%= link_to "Cancel This Review", removed_applicants_delete_pending_score_path, class: "red-link" %></p>
   <p>----- or ------</p>
   <p><%= link_to "Cancel and remove #{@applicant.full_name} from my queue", removed_applicants_create_path(@applicant), class: "red-link" %></p>
 </div>
