--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -131,9 +131,14 @@ th, td {
   }
 }
 
-.blue-link-button {
+/* .index-pending {
   justify-content: center;
-}
+  text-align: center;
+  margin-top: 50px;
+  padding: 10px;
+  border-top: 1px solid var(--color-black);
+  border-bottom: 1px solid var(--color-black);
+} */
 
 .blue-link {
   text-decoration: none;
@@ -263,12 +268,15 @@ th, td {
 }
 
 .removed-title {
-  font-size: 23px;
+  font-size: 20px;
+  padding: 10px;
+  border-top: 1px solid var(--color-black);
+  border-bottom: 1px solid var(--color-black);
 }
 
 .removed-list {
   text-align: left;
-  font-size: 24px;
+  font-size: 20px;
   padding: 13px;
   max-width: 300px;
 }
