--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -56,5 +56,13 @@
   <% end %>
 </div>
 <div class="cancel-buttons-div">
-  <p><%= link_to "Cancel This Edit", scores_path, class: "red-link" %></p>
+  <p><%= link_to "Cancel This Review",
+                 scores_path,
+                 {
+                   class: "red-link",
+                   onclick: "return confirm('Are you sure you want to cancel this score?')"
+                 } %>
+  </p>
 </div>
+
+
