--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -2,17 +2,20 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-size: 100%;
 }
 
 .home-main {
   justify-content: center;
   text-align: center;
+  border: 1px solid var(--color-dark-gray);
+  padding: 2rem;
 }
 
 .title-section {
   background-color: rgb(250, 251, 255);
   text-align: center;
-  font-size: 35px;
+  font-size: 1rem;
   margin-bottom: 1.5rem;
   margin-top: 1.5rem;
 }
@@ -25,8 +28,8 @@
   background-color: rgb(250, 255, 250);
   padding: 2rem;
   font-size: 1.5rem;
-  border-top: 2px solid var(--color-dark-gray);
-  border-bottom: 2px solid var(--color-dark-gray);
+  border: 2px solid var(--color-dark-gray);
+  /* border-bottom: 2px solid var(--color-dark-gray); */
 }
 
 .scores-form {
@@ -80,7 +83,7 @@ li {
 }
 
 .index-title {
-  font-size: 35px;
+  font-size: 2rem;
   background-color: rgb(255, 244, 233);
 }
 
@@ -119,7 +122,6 @@ th, td {
 }
 
 .edit-button:hover {
-  /* link text color disables text color */
   background-color: rgb(194, 219, 248);
   color: rgb(210, 209, 219);
   border: 1px solid var(--color-black);
@@ -130,15 +132,6 @@ th, td {
     box-shadow: unset;
   }
 }
-
-/* .index-pending {
-  justify-content: center;
-  text-align: center;
-  margin-top: 50px;
-  padding: 10px;
-  border-top: 1px solid var(--color-black);
-  border-bottom: 1px solid var(--color-black);
-} */
 
 .blue-link {
   text-decoration: none;
@@ -204,12 +197,13 @@ th, td {
 }
 
 .text-area {
-  width: 36rem;
+  width: 50rem;
   height: 7rem;
+  line-height: 1.8rem;
 }
 
 .cancel-buttons-div {
-  margin: 4em 0 2em 0;
+  margin: 3rem 0 2rem 0;
 }
 
 .red-link {
@@ -272,7 +266,7 @@ th, td {
 }
 
 .removed-title {
-  font-size: 20px;
+  font-size: 1.5rem;
   padding: 10px;
   border-top: 1px solid var(--color-black);
   border-bottom: 1px solid var(--color-black);
@@ -280,7 +274,7 @@ th, td {
 
 .removed-list {
   text-align: left;
-  font-size: 20px;
+  font-size: 1.5rem;
   padding: 13px;
   max-width: 300px;
 }
