--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -56,11 +56,11 @@
   <% end %>
 </div>
 <div class="cancel-buttons-div">
-  <p><%= link_to "Cancel This Review",
+  <p><%= link_to "Cancel This Edit",
                  scores_path,
                  {
                    class: "red-link",
-                   onclick: "return confirm('Are you sure you want to cancel this score?')"
+                   onclick: "return confirm('Are you sure you want to cancel this score edit?')"
                  } %>
   </p>
 </div>
