--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -19,21 +19,21 @@
   <% end %>
   <div class="home-main">
     <% if !current_user.pending_score.nil? %>
-      <h4>Pending score: <%= current_user.pending_score.applicant.full_name %></h4>
+      <p>You have a pending score: <%= current_user.pending_score.applicant.full_name %></p>
       <p><%= button_to "Continue Scoring #{current_user.pending_score.applicant.first_name}", new_score_path(@applicant), method: :get, class: "green-link" %></p>
     <% else %>
-        <div class="title-section">
-          <h4>To Review New Applicants:</h4>
-        </div>
-        <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
-        <p>----- or -----</p>
-        <p> Choose from the list:</p>
-        <div class="select-form">
-          <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
-            <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-            <%= submit_tag 'Choose', class: "green-link-select" %>
-          <% end %>
-        </div>
+      <div class="title-section">
+        <h4>To Review New Applicants:</h4>
+      </div>
+      <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
+      <p>----- or -----</p>
+      <p> Choose from the list:</p>
+      <div class="select-form">
+        <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+          <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+          <%= submit_tag 'Choose', class: "green-link-select" %>
+        <% end %>
+      </div>
     <% end %>
   </div>
 <% end %>
