random changes - favicon, site title in header, name in header, styling...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
+    <%= favicon_link_tag asset_path('HNC-Logo-RGB-vert-color-smaller.png')%>
   </head>
 
   <body class="l-body">
