--- a/app/javascript/application/styles/4_layout/header.css
+++ b/app/javascript/application/styles/4_layout/header.css
@@ -18,8 +18,8 @@
   & .l-header__button {
     height: var(--spacing-header-height);
     border-color: var(--color-white);
-    margin: -0.5rem;
-    margin-top: 0.2rem;
+    text-align: center;
+    margin: auto;
     display: flex;
     color: var(--color-white);
     font-size: var(--font-size-sm);
@@ -29,5 +29,19 @@
     background-color: var(--color-white);
     color: var(--color-dark-gray);
     cursor: pointer;
+  }
+
+  /* & .header-name-div {
+    height: var(--spacing-header-height);
+    border-color: var(--color-white);
+  } */
+
+  & .header-name {
+    text-align: center;
+    margin: auto;
+    padding: 1rem 0 1rem 0;
+    display: flex;
+    color: var(--color-white);
+    font-size: var(--font-size-lg);
   }
 }
