--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,5 @@
 <div class="l-footer">
-    <div><h5>There will be pertinent info here.</h5></div>
+  <div>
+    <h5>Questions/Problems? Email: admin@hemophilia-nc.org or text 919-810-8269</h5>
+  </div>
 </div>
