style login form

--- a/app/javascript/application/styles/2_elements/forms.css
+++ b/app/javascript/application/styles/2_elements/forms.css
@@ -15,3 +15,32 @@ select {
 label {
   padding-right: var(--spacing-xxs);
 }
+
+.field {
+  margin: 1rem;
+  padding: 1rem;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+.actions {
+  font-size: 2rem;
+  line-height: 2.2rem;
+  text-align: center;
+
+}
+
+.login-button {
+  margin-top: 1.7rem;
+  background-color: var(--color-white);
+}
+
+.login-button:hover {
+  color: var(--color-white);
+  background-color: var(--color-dark-gray);
+}
+
+.login-checkbox {
+  text-align: center;
+  transform: scale(2);
+}
