--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -20,7 +20,7 @@
       <% points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0] %>
       <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
       <div class="mccoy-checkbox-div">
-        <%= check_box_tag(:mccoy, 1, f.object.mccoy?, class: "mccoy-checkbox") %>&nbsp&nbsp&nbsp&#x2B05
+        <%= check_box_tag(:mccoy, 1, f.object.mccoy?, class: "checkbox") %>&nbsp&nbsp&nbsp&#x2B05
         <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)", class: "checkboxtext") %>
       </div>
       <table class="new-score-selectors-table">
