remove steps for instructions

--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -29,7 +29,7 @@
   padding: 2rem;
   font-size: 1.5rem;
   border: 2px solid var(--color-dark-gray);
-  /* border-bottom: 2px solid var(--color-dark-gray); */
+  margin-top: 6rem;
 }
 
 .scores-form {
@@ -160,7 +160,8 @@ th, td {
   list-style-type: none;
 }
 
-.new-link {
+.application-link {
+  margin-left: 6rem;
   font-size: 1.5rem;
 }
 
@@ -178,13 +179,6 @@ th, td {
   transform: scale(2);
   padding: 4rem;
 }
-
-/* .checkboxtext {
-  padding-left: 1rem;
-  padding-top: 1rem;
-  font-size: 110%;
-  display: inline;
-} */
 
 .new-score-selectors-table {
   margin-bottom: 50px;
