--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -22,22 +22,22 @@
       <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
       <div class="mccoy-checkbox-div">
         <%= check_box_tag(:mccoy, 1, f.object.mccoy?, class: "checkbox") %>&nbsp&nbsp&nbsp&#x2B05
-        <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)", class: "checkboxtext") %>
+        <%= label_tag(:mccoy, "Check if eligible for McCoy Scholarship (hemophilia A, severe)", class: "checkboxtext") %>
       </div>
       <table class="new-score-selectors-table">
         <tr>
+          <td class="score-select-td"><%= f.select :financial, points, prompt: "Enter Rating", class: "selector" %></td>
           <td class="score-select-td"><%= f.label :financial, "Financial Need", class: "form-label" %></td>
-          <td class="score-select-td"><%= f.select :financial, points, prompt: true, class: "selector" %></td>
         </tr>
+          <td class="score-select-td"><%= f.select :academic, points, prompt: "Enter Rating", class: "selector" %></td>
           <td class="score-select-td"><%= f.label :academic, "Academics", class: "form-label" %></td>
-          <td class="score-select-td"><%= f.select :academic, points, prompt: true, class: "selector" %></td>
         </tr>
+          <td class="score-select-td"><%= f.select :recommend, points, prompt: "Enter Rating", class: "selector" %></td>
           <td class="score-select-td"><%= f.label :recommend, "Recommendations", class: "form-label" %></td>
-          <td class="score-select-td"><%= f.select :recommend, points, prompt: true, class: "selector" %></td>
         </tr>
         <tr>
-          <td class="score-select-td"><%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible", class: "form-label" %></td>
-          <td class="score-select-td"><%= f.select :essay, ten_points, prompt: true, class: "selector" %></td>
+          <td class="score-select-td"><%= f.select :essay, ten_points, prompt: "Enter Rating", class: "selector" %></td>
+          <td class="score-select-td"><%= f.label :essay, "Reader Impressions", class: "form-label" %></td>
         </tr>
       </table>
       <p><%= f.label :comments, "Comments (optional)" %></p>
